Update: Various changes including about page fix and project updates

--- a/public/index.html
+++ b/public/index.html
@@ -53,8 +53,8 @@
             </a>
             <nav class="nav-menu">
                 <a href="#home" class="nav-link active">Home</a>
-                <a href="#services" class="nav-link">Services</a>
-                <a href="#features" class="nav-link">Features</a>
+                <a href="services.html" class="nav-link">Services</a>
+                <a href="about.html" class="nav-link">About</a>
                 <a href="#testimonials" class="nav-link">Testimonials</a>
                 <a href="#contact" class="nav-link">Contact</a>
                 <a href="contact.html" class="btn btn-primary nav-cta">Get Started</a>
@@ -75,7 +75,7 @@
                 <div class="hero-content">
                     <div class="hero-badge">
                         <i class="fas fa-check-circle"></i>
-                        <span>Trusted by 500+ Clients Worldwide</span>
+                        <span>Trusted by 25+ Clients Worldwide</span>
                     </div>
 
                     <h1 class="hero-title">
@@ -118,10 +118,10 @@
                 <div class="hero-image">
                     <div class="hero-shape hero-shape-1"></div>
                     <div class="hero-shape hero-shape-2"></div>
-                    <!-- Placeholder for hero image -->
+                    <!-- Hero Icon -->
                     <div
-                        style="width: 100%; max-width: 500px; height: 400px; background: linear-gradient(135deg, #1a73e8 0%, #0d47a1 100%); border-radius: 16px; display: flex; align-items: center; justify-content: center; color: white; font-size: 48px;">
-                        <i class="fas fa-laptop-code"></i>
+                        style="width: 100%; max-width: 500px; height: 400px; background-color: var(--bg-light); border-radius: 16px; display: flex; align-items: center; justify-content: center; box-shadow: var(--shadow-xl);">
+                        <i class="fas fa-laptop-code" style="font-size: 120px; color: var(--primary-blue);"></i>
                     </div>
                 </div>
             </div>
@@ -137,18 +137,19 @@
                 </div>
 
                 <div class="services-grid">
-                    <!-- Service 1 -->
+                    <!-- Service 1 - Data Infrastructure -->
                     <div class="service-card fade-in">
                         <div class="service-icon">
                             <i class="fas fa-database"></i>
                         </div>
                         <h3 class="service-title">Data Infrastructure</h3>
-                        <p class="service-description">Your remote extension in the datacenter — providing immediate, hands-on assistance without the need for your team to
-                        travel.</p>
-                        <a href="#" class="service-link">Learn More <i class="fas fa-arrow-right"></i></a>
+                        <p class="service-description">Your remote extension in the datacenter — providing immediate,
+                            hands-on assistance without the need for your team to travel.</p>
+                        <a href="data-infrastructure.html" class="service-link">Learn More <i
+                                class="fas fa-arrow-right"></i></a>
                     </div>
 
-                    <!-- Service 2 -->
+                    <!-- Service 2 - Mobile App Development -->
                     <div class="service-card fade-in">
                         <div class="service-icon">
                             <i class="fas fa-mobile-alt"></i>
@@ -159,7 +160,7 @@
                         <a href="#" class="service-link">Learn More <i class="fas fa-arrow-right"></i></a>
                     </div>
 
-                    <!-- Service 3 -->
+                    <!-- Service 3 - Cloud Solutions -->
                     <div class="service-card fade-in">
                         <div class="service-icon">
                             <i class="fas fa-cloud"></i>
@@ -167,10 +168,11 @@
                         <h3 class="service-title">Cloud Solutions</h3>
                         <p class="service-description">Cloud migration, infrastructure management, and serverless
                             solutions. Scalable and secure cloud services for modern businesses.</p>
-                        <a href="#" class="service-link">Learn More <i class="fas fa-arrow-right"></i></a>
+                        <a href="cloud-solutions.html" class="service-link">Learn More <i
+                                class="fas fa-arrow-right"></i></a>
                     </div>
 
-                    <!-- Service 4 -->
+                    <!-- Service 4 - Cybersecurity -->
                     <div class="service-card fade-in">
                         <div class="service-icon">
                             <i class="fas fa-shield-alt"></i>
@@ -178,10 +180,11 @@
                         <h3 class="service-title">Cybersecurity</h3>
                         <p class="service-description">Comprehensive security solutions including penetration testing,
                             vulnerability assessment, and security auditing to protect your digital assets.</p>
-                        <a href="#" class="service-link">Learn More <i class="fas fa-arrow-right"></i></a>
+                        <a href="cybersecurity.html" class="service-link">Learn More <i
+                                class="fas fa-arrow-right"></i></a>
                     </div>
 
-                    <!-- Service 5 -->
+                    <!-- Service 5 - Web Development -->
                     <div class="service-card fade-in">
                         <div class="service-icon">
                             <i class="fas fa-code"></i>
@@ -189,10 +192,11 @@
                         <h3 class="service-title">Web Development</h3>
                         <p class="service-description">Custom website development using latest technologies. Responsive,
                             fast, and SEO-optimized websites that convert visitors into customers.</p>
-                        <a href="#" class="service-link">Learn More <i class="fas fa-arrow-right"></i></a>
+                        <a href="web-development.html" class="service-link">Learn More <i
+                                class="fas fa-arrow-right"></i></a>
                     </div>
 
-                    <!-- Service 6 -->
+                    <!-- Service 6 - IT Support & Maintenance -->
                     <div class="service-card fade-in">
                         <div class="service-icon">
                             <i class="fas fa-headset"></i>
@@ -211,10 +215,9 @@
             <div class="container">
                 <div class="features-content">
                     <div class="features-image slide-in-left">
-                        <!-- Placeholder for features image -->
                         <div
-                            style="width: 100%; height: 400px; background: linear-gradient(135deg, #f8f9fa 0%, #e8eaed 100%); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: #1a73e8; font-size: 72px;">
-                            <i class="fas fa-chart-line"></i>
+                            style="width: 100%; height: 400px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center; box-shadow: var(--shadow-xl);">
+                            <i class="fas fa-chart-line" style="font-size: 72px; color: var(--primary-blue);"></i>
                         </div>
                         <div class="features-badge">
                             <div class="features-badge-number">98%</div>
@@ -341,20 +344,20 @@
                             class="partner-slide" aria-label="Tech Mahindra">
                             <img src="images/techmahindra.svg" alt="Tech Mahindra">
                         </a>
-                        <a href="https://focusgroup.co.uk/" target="_blank" rel="noopener noreferrer" class="partner-slide"
-                            aria-label="Focus Group">
+                        <a href="https://focusgroup.co.uk/" target="_blank" rel="noopener noreferrer"
+                            class="partner-slide" aria-label="Focus Group">
                             <img src="images/focusgroup.svg" alt="Focus Group">
                         </a>
                         <a href="https://ironserviceglobal.com/" target="_blank" rel="noopener noreferrer"
                             class="partner-slide" aria-label="Iron Service Global">
                             <img src="images/ironservice.svg" alt="Iron Service Global">
                         </a>
-                        <a href="https://www.h3c.com/en/" target="_blank" rel="noopener noreferrer" class="partner-slide"
-                            aria-label="H3C">
+                        <a href="https://www.h3c.com/en/" target="_blank" rel="noopener noreferrer"
+                            class="partner-slide" aria-label="H3C">
                             <img src="images/h3c.svg" alt="H3C">
                         </a>
-                        <a href="https://www.huawei.com/eu/" target="_blank" rel="noopener noreferrer" class="partner-slide"
-                            aria-label="Huawei">
+                        <a href="https://www.huawei.com/eu/" target="_blank" rel="noopener noreferrer"
+                            class="partner-slide" aria-label="Huawei">
                             <img src="images/huawei.svg" alt="Huawei">
                         </a>
                         <!-- Duplicate set for seamless loop -->
@@ -362,20 +365,20 @@
                             class="partner-slide" aria-label="Tech Mahindra">
                             <img src="images/techmahindra.svg" alt="Tech Mahindra">
                         </a>
-                        <a href="https://focusgroup.co.uk/" target="_blank" rel="noopener noreferrer" class="partner-slide"
-                            aria-label="Focus Group">
+                        <a href="https://focusgroup.co.uk/" target="_blank" rel="noopener noreferrer"
+                            class="partner-slide" aria-label="Focus Group">
                             <img src="images/focusgroup.svg" alt="Focus Group">
                         </a>
                         <a href="https://ironserviceglobal.com/" target="_blank" rel="noopener noreferrer"
                             class="partner-slide" aria-label="Iron Service Global">
                             <img src="images/ironservice.svg" alt="Iron Service Global">
                         </a>
-                        <a href="https://www.h3c.com/en/" target="_blank" rel="noopener noreferrer" class="partner-slide"
-                            aria-label="H3C">
+                        <a href="https://www.h3c.com/en/" target="_blank" rel="noopener noreferrer"
+                            class="partner-slide" aria-label="H3C">
                             <img src="images/h3c.svg" alt="H3C">
                         </a>
-                        <a href="https://www.huawei.com/eu/" target="_blank" rel="noopener noreferrer" class="partner-slide"
-                            aria-label="Huawei">
+                        <a href="https://www.huawei.com/eu/" target="_blank" rel="noopener noreferrer"
+                            class="partner-slide" aria-label="Huawei">
                             <img src="images/huawei.svg" alt="Huawei">
                         </a>
                     </div>
@@ -513,16 +516,20 @@
                         <img src="images/kamal-it-solutions-logo-footer.svg" alt="Kamal IT Solutions Logo">
                         <span class="logo-text"><span>Kamal</span> IT Solutions</span>
                     </a>
-                    <p>Innovating your digital future with professional IT solutions and cutting-edge technology services.</p>
+                    <p>Innovating your digital future with professional IT solutions and cutting-edge technology
+                        services.</p>
                     <div class="footer-social">
-                        <a href="https://www.facebook.com/share/1EwCfusyXb/?mibextid=wwXIfr" class="social-facebook" aria-label="Facebook">
+                        <a href="https://www.facebook.com/share/1EwCfusyXb/?mibextid=wwXIfr" class="social-facebook"
+                            aria-label="Facebook">
                             <i class="fab fa-facebook-f"></i>
                         </a>
                         <a href="https://x.com/solutions_61780" class="social-x" aria-label="X">X</a>
-                        <a href="https://www.linkedin.com/company/kamal-it-solutions/" class="social-linkedin" aria-label="LinkedIn">
+                        <a href="https://www.linkedin.com/company/kamal-it-solutions/" class="social-linkedin"
+                            aria-label="LinkedIn">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                        <a href="https://www.instagram.com/kamalitsolutions.us/" class="social-instagram" aria-label="Instagram">
+                        <a href="https://www.instagram.com/kamalitsolutions.us/" class="social-instagram"
+                            aria-label="Instagram">
                             <i class="fab fa-instagram"></i>
                         </a>
                     </div>
@@ -533,7 +540,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="#features">Features</a></li>
+                        <li><a href="about.html">About</a></li>
                         <li><a href="#testimonials">Testimonials</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -561,7 +568,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p class="footer-copyright">&copy; 2024 Kamal IT Solutions. All rights reserved.</p>
+                <p class="footer-copyright">© 2024 Kamal IT Solutions. All rights reserved.</p>
                 <div class="footer-legal">
                     <a href="privacy-policy.html">Privacy Policy</a>
                     <a href="terms-of-service.html">Terms of Service</a>
