--- a/public/contact.html
+++ b/public/contact.html
@@ -47,8 +47,8 @@
             <nav class="nav-menu">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="services.html" class="nav-link">Services</a>
-                <a href="#features" class="nav-link">Features</a>
-                <a href="#testimonials" class="nav-link">Testimonials</a>
+                <a href="about.html" class="nav-link">About</a>
+                <a href="index.html#testimonials" class="nav-link">Testimonials</a>
                 <a href="contact.html" class="btn btn-primary nav-cta">Get Started</a>
             </nav>
 
@@ -184,11 +184,10 @@
         <!-- Map Section -->
         <section class="section" style="padding-top: 0;">
             <div class="container">
-                <div
-                    style="width: 100%; height: 400px; background: linear-gradient(135deg, #f8f9fa 0%, #e8eaed 100%); border-radius: 12px; display: flex; flex-direction: column; align-items: center; justify-content: center; color: #5f6368;">
-                    <i class="fas fa-map-marked-alt" style="font-size: 48px; margin-bottom: 15px; color: #1a73e8;"></i>
-                    <p style="font-size: 18px; margin-bottom: 10px;">Interactive Map</p>
-                    <p style="font-size: 14px; max-width: 400px; text-align: center;">Add your Google Maps embed code here to show your business location on the map.</p>
+                <div style="width: 100%; height: 400px; background-color: var(--bg-light); border-radius: 12px; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+                    <i class="fas fa-map-marked-alt" style="font-size: 48px; margin-bottom: 15px; color: var(--primary-blue);"></i>
+                    <p style="font-size: 18px; margin-bottom: 10px; color: var(--text-secondary);">Interactive Map</p>
+                    <p style="font-size: 14px; max-width: 400px; text-align: center; color: var(--text-secondary);">Add your Google Maps embed code here to show your business location on the map.</p>
                 </div>
             </div>
         </section>
@@ -267,8 +266,8 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="#features">Features</a></li>
-                        <li><a href="#testimonials">Testimonials</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="index.html#testimonials">Testimonials</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -310,3 +309,4 @@
 </body>
 
 </html>
+
