--- a/public/data-infrastructure.html
+++ b/public/data-infrastructure.html
@@ -47,8 +47,8 @@
             <nav class="nav-menu">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="services.html" class="nav-link">Services</a>
-                <a href="#features" class="nav-link">Features</a>
-                <a href="#testimonials" class="nav-link">Testimonials</a>
+                <a href="about.html" class="nav-link">About</a>
+                <a href="index.html#testimonials" class="nav-link">Testimonials</a>
                 <a href="contact.html" class="btn btn-primary nav-cta">Get Started</a>
             </nav>
 
@@ -88,8 +88,8 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background: linear-gradient(135deg, #1a73e8 0%, #0d47a1 100%); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 64px;">
-                            <i class="fas fa-server"></i>
+                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                            <i class="fas fa-server" style="font-size: 64px; color: var(--primary-blue);"></i>
                         </div>
                     </div>
                 </div>
@@ -110,8 +110,8 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background: linear-gradient(135deg, #4285f4 0%, #1967d2 100%); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 64px;">
-                            <i class="fas fa-network-wired"></i>
+                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                            <i class="fas fa-network-wired" style="font-size: 64px; color: var(--primary-blue);"></i>
                         </div>
                     </div>
                 </div>
@@ -132,8 +132,8 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background: linear-gradient(135deg, #34a853 0%, #1e8e3e 100%); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 64px;">
-                            <i class="fas fa-hdd"></i>
+                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                            <i class="fas fa-hdd" style="font-size: 64px; color: var(--primary-blue);"></i>
                         </div>
                     </div>
                 </div>
@@ -154,8 +154,8 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background: linear-gradient(135deg, #fbbc04 0%, #ea8600 100%); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 64px;">
-                            <i class="fas fa-chart-line"></i>
+                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                            <i class="fas fa-chart-line" style="font-size: 64px; color: var(--primary-blue);"></i>
                         </div>
                     </div>
                 </div>
@@ -167,9 +167,8 @@
             <div class="container">
                 <div class="features-content">
                     <div class="features-image slide-in-left">
-                        <div
-                            style="width: 100%; height: 400px; background: linear-gradient(135deg, #f8f9fa 0%, #e8eaed 100%); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: #1a73e8; font-size: 72px;">
-                            <i class="fas fa-database"></i>
+                        <div style="width: 100%; height: 400px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                            <i class="fas fa-database" style="font-size: 72px; color: var(--primary-blue);"></i>
                         </div>
                     </div>
 
@@ -366,8 +365,8 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="#features">Features</a></li>
-                        <li><a href="#testimonials">Testimonials</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="index.html#testimonials">Testimonials</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -409,3 +408,4 @@
 </body>
 
 </html>
+
