--- a/public/services.html
+++ b/public/services.html
@@ -34,8 +34,8 @@
             <nav class="nav-menu">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="services.html" class="nav-link active">Services</a>
-                <a href="#features" class="nav-link">Features</a>
-                <a href="#testimonials" class="nav-link">Testimonials</a>
+                <a href="about.html" class="nav-link">About</a>
+                <a href="index.html#testimonials" class="nav-link">Testimonials</a>
                 <a href="contact.html" class="btn btn-primary nav-cta">Get Started</a>
             </nav>
 
@@ -76,8 +76,8 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background: linear-gradient(135deg, #1a73e8 0%, #0d47a1 100%); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 64px;">
-                            <i class="fas fa-laptop-code"></i>
+                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                            <i class="fas fa-laptop-code" style="font-size: 64px; color: var(--primary-blue);"></i>
                         </div>
                     </div>
                 </div>
@@ -99,8 +99,8 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background: linear-gradient(135deg, #34a853 0%, #1e8e3e 100%); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 64px;">
-                            <i class="fas fa-mobile-screen-button"></i>
+                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                            <i class="fas fa-mobile-screen-button" style="font-size: 64px; color: var(--primary-blue);"></i>
                         </div>
                     </div>
                 </div>
@@ -122,8 +122,8 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background: linear-gradient(135deg, #4285f4 0%, #1967d2 100%); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 64px;">
-                            <i class="fas fa-cloud-arrow-up"></i>
+                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                            <i class="fas fa-cloud-arrow-up" style="font-size: 64px; color: var(--primary-blue);"></i>
                         </div>
                     </div>
                 </div>
@@ -145,8 +145,8 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background: linear-gradient(135deg, #ea4335 0%, #c5221f 100%); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 64px;">
-                            <i class="fas fa-lock"></i>
+                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                            <i class="fas fa-lock" style="font-size: 64px; color: var(--primary-blue);"></i>
                         </div>
                     </div>
                 </div>
@@ -168,8 +168,8 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background: linear-gradient(135deg, #fbbc04 0%, #ea8600 100%); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 64px;">
-                            <i class="fas fa-robot"></i>
+                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                            <i class="fas fa-robot" style="font-size: 64px; color: var(--primary-blue);"></i>
                         </div>
                     </div>
                 </div>
@@ -191,8 +191,8 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background: linear-gradient(135deg, #5f6368 0%, #3c4043 100%); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 64px;">
-                            <i class="fas fa-headset"></i>
+                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                            <i class="fas fa-headset" style="font-size: 64px; color: var(--primary-blue);"></i>
                         </div>
                     </div>
                 </div>
@@ -303,8 +303,8 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="#features">Features</a></li>
-                        <li><a href="#testimonials">Testimonials</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="index.html#testimonials">Testimonials</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -331,7 +331,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p class="footer-copyright">&copy; 2024 Kamal IT Solutions. All rights reserved.</p>
+                <p class="footer-copyright">© 2024 Kamal IT Solutions. All rights reserved.</p>
                 <div class="footer-legal">
                     <a href="privacy-policy.html">Privacy Policy</a>
                     <a href="terms-of-service.html">Terms of Service</a>
