--- a/public/terms-of-service.html
+++ b/public/terms-of-service.html
@@ -47,8 +47,8 @@
             <nav class="nav-menu">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="services.html" class="nav-link">Services</a>
-                <a href="#features" class="nav-link">Features</a>
-                <a href="#testimonials" class="nav-link">Testimonials</a>
+                <a href="about.html" class="nav-link">About</a>
+                <a href="index.html#testimonials" class="nav-link">Testimonials</a>
                 <a href="contact.html" class="btn btn-primary nav-cta">Get Started</a>
             </nav>
 
@@ -225,8 +225,8 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="#features">Features</a></li>
-                        <li><a href="#testimonials">Testimonials</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="index.html#testimonials">Testimonials</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -268,3 +268,4 @@
 </body>
 
 </html>
+
